--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="main">
               <div class="item">
                  <div class="item_img">
-                    <img src="https://github.com/2Groza/images/blob/master/ID/hao1.jpg" alt="Testing Demo Project pic">
+                    <img src="hao1.jpg" alt="Testing Demo Project pic">
                  </div>
                  <div class="item_content">
                     <h3>LinuxCast测试标题测试标题</h3>
