--- a/index.html
+++ b/index.html
@@ -30,37 +30,12 @@
         <div class="main">
               <div class="item">
                  <div class="item_img">
-                    <img src="hao1.jpg" alt="Testing Demo Project pic">
+                    <img src="hao1.jpg" height="200" width="200">
                  </div>
                  <div class="item_content">
-                    <h3>LinuxCast测试标题测试标题</h3>
-                    <p class="item_info">作者：XXX  发表于：2017年7月15号</p>
-                    <p class="item_desc">LinuxCast测试内容测试内容测试内容测试文字测<br>
-                    测试文字测试文字测试文字测试文字测试文字测试文字</p>
-                 </div>
-              </div>
-              <div class="item">
-                 <div class="item_img">
-                    <img src="cast.png" alt="Testing Demo Project pic">
-                 </div>
-                 <div class="item_content">
-                    <h3>LinuxCast测试标题测试标题</h3>
-                    <p class="item_info">作者：XXX 发表于：2017年7月15号</p>
-                    <p class="item_desc">LinuxCast测试内容测试内容测试内容测试文字测<br>
-                    测试文字测试文字测试文字测试文字测试文字测试文字</p>
-                 </div>
-              </div>
- 
- 
-              <div class="item">
-                 <div class="item_img">
-                    <img src="cast.png" alt="Testing Demo Project pic">
-                 </div>
-                 <div class="item_content">
-                    <h3>LinuxCast测试标题测试标题</h3>
-                    <p class="item_info">作者：XXX 发表于：2017年7月15号</p>
-                    <p class="item_desc">LinuxCast测试内容测试内容测试内容测试文字测<br>
-                    测试文字测试文字测试文字测试文字测试文字测试文字</p>
+                    <h3>Short Bio</h3>
+                    <p class="item_info"></p>
+                    <p class="item_desc"></p>
                  </div>
               </div>
  
