--- a/index.html
+++ b/index.html
@@ -45,40 +45,12 @@
                     <img src="cast.png" alt="Testing Demo Project pic">
                  </div>
                  <div class="item_content">
-                    <h3>LinuxCast测试标题测试标题</h3>
-                    <p class="item_info">作者：XXX 发表于：2017年7月15号</p>
-                    <p class="item_desc">LinuxCast测试内容测试内容测试内容测试文字测<br>
-                    测试文字测试文字测试文字测试文字测试文字测试文字</p>
+                    <h3>Research Experience</h3>
+                    <p class="item_info"></p>
+                    <p class="item_desc"></p>
                  </div>
               </div>
         </div>
-        <div class="side">
-              <div class="author_info">
-                   <div class="author_img">
-                      <img src="author.jpg" alt="Testing Demo project pic">
-                   </div>
-                   <div class="author_desc">
-                      <h4>Double Sweet</h4>
-                      <p>emmm..<br>
-                        emmmmmmmm...</p>
-                   </div>
-              </div>
-              <div class="top_article">
-                   <h4>推荐文章</h4>
-                   <ul>
-                   <li>好文要顶-1</li>
-                   <li>好文要顶-2</li>
-                   <li>好文要顶-3</li>
-                   <li>好文要顶-4</li>
-                   <li>好文要顶-5</li>
-                   </ul>
-              </div>
-              <div class="site-info">
-                   <p>访客：555555</p>
-                   <p>文章：666篇</p>
-              </div>
-        </div>
-        <div class="clear"></div>
  
  
     </div>
@@ -86,7 +58,7 @@
  
     <div id="footer">
       <div class="site_about">
-           <p>2015-2017 CopyRight LinuxCast.net Demo Site</p>
+           <p></p>
       </div>
       <div class="site_link">
            <ul>
@@ -97,7 +69,6 @@
            </ul>
       </div>
       <div class="clear"></div>
- 
  
     </div>
  
