--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="head">
         <div class="logo_title">
                <h1>Hao Sun</h1>
-               <h2>简易的个性主页</h2>
+               <h2>A brief introduction</h2>
         </div>
         <div class="navi">
            <ul>
