--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <tbody>
                   <tr>
                     <td width="323">
-                      <p align="center"><font face="Arial"><img border="0" src="hao1.jpg" width="150" height="200"></font></p>
+                      <p align="center"><font face="Arial"><img border="0" src="images/hao1.jpg" width="150" height="200"></font></p>
                     </td>
                     <td>
                       <font face="Arial" size="5"><b>&nbsp;Hao Sun <span lang="zh-cn">孙浩</span></b></font>
@@ -85,7 +85,7 @@
     <tbody>
       <tr valign="baseline">
         <td width="90">
-          <p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a target="_blank"><img src="cuhk.png" width="45" border="0"></a></p>
+          <p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a target="_blank"><img src="images/cuhk.png" width="45" border="0"></a></p>
         </td>
         <td valign="middle"><p style="margin-top:0; margin-right:0; margin-bottom:2mm;">
           <span style="font-weight: bold;">Unsupervised Video Summarization
@@ -110,7 +110,7 @@
     <tbody>
       <tr valign="baseline">
         <td width="90">
-          <p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a target="_blank"><img src="cuhk.png" width="45" border="0"></a></p>
+          <p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a target="_blank"><img src="images/cuhk.png" width="45" border="0"></a></p>
         </td>
         <td valign="middle"><p style="margin-top:0; margin-right:0; margin-bottom:2mm;">
           <span style="font-weight: bold;">Navigation using Reinforcement Learning
@@ -136,7 +136,7 @@
     <tbody>
       <tr valign="baseline">
         <td width="90">
-          <p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a target="_blank"><img src="pku.png" width="45" border="0"></a></p>
+          <p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a target="_blank"><img src="images/pku.png" width="45" border="0"></a></p>
         </td>
         <td valign="middle"><p style="margin-top:0; margin-right:0; margin-bottom:2mm;">
           <span style="font-weight: bold;">PROMISE-12 MRI Segmemtation Challenge
@@ -162,7 +162,7 @@
     <tbody>
       <tr valign="baseline">
         <td width="90">
-          <p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a target="_blank"><img src="uiuc.png" width="40" border="0"></a></p>
+          <p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a target="_blank"><img src="images/uiuc.png" width="40" border="0"></a></p>
         </td>
         <td valign="middle"><p style="margin-top:0; margin-right:0; margin-bottom:2mm;">
           <span style="font-weight: bold;">Unsupervised Star-Galaxy Classification and Segmentation
@@ -188,7 +188,7 @@
     <tbody>
       <tr valign="baseline">
         <td width="90">
-          <p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a target="_blank"><img src="favicon.ico" width="50" border="0"></a></p>
+          <p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a target="_blank"><img src="images/favicon.ico" width="50" border="0"></a></p>
         </td>
         <td valign="middle"><p style="margin-top:0; margin-right:0; margin-bottom:2mm;">
           <span style="font-weight: bold;">Reinforcement Learning Research Intern
@@ -214,7 +214,7 @@
     <tbody>
       <tr valign="baseline">
         <td width="90">
-          <p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a target="_blank"><img src="pku.png" width="45" border="0"></a></p>
+          <p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a target="_blank"><img src="images/pku.png" width="45" border="0"></a></p>
         </td>
         <td valign="middle"><p style="margin-top:0; margin-right:0; margin-bottom:2mm;">
           <span style="font-weight: bold;">Machine Learning Meets Ising Model
