--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
                  <div class="item_content">
                     <h3>About Me</h3>
                      <p class="item_info">I received my B.Sc from Yuanpei College, Peking University at 2018. I finished all of the compulsory courses in Physics and Data Science and got a double degree of Management from Guanghua School, Peking University. I was a research intern of AI Institute of Sinovation Ventures founded by Dr. Kaifu Lee, and a research assistant of LCDM group@UIUC. <br>
-                      My research interest lies in Machine Learning and Computer Vision, particularly in the field of unsupervised learning and reinforcement learning. For I believe reinforcement learning provides with a more natural approach to intelligence and unsupervised methods force us to think about the intrinsic factors beyond mass data.
+                      My research interest lies in Machine Learning and Computer Vision, particularly in the field of unsupervised learning and reinforcement learning. I believe reinforcement learning provides a more natural approach to intelligence and unsupervised methods force us to learn about the intrinsic factors beyond mass data.
                     <p class="item_desc"></p>
                  </div>
                  <div class="item_content">
                   <h3>Academic</h3>
                   <p class="item_info">
-                    
+                    <span style="font-weight: bold;">Sep.2013-Jul.2018 &nbsp; B.Sc &nbsp; School of Physics& Yuanpei College &nbsp; Peking University<br>
+                    </span>
                     <span style="font-weight: bold;">Coursework:<br>
                     </span>
                     Overall Grade: 89/100, ranked 29/271 <br>
