--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </p>
                     <span style="font-weight: bold;">Undergraduate Thesis:<br>
                       <a href="https://github.com/2Groza/Undergraduate-Thesis">Applications of Deep Learning in Physics</a><br>
-                      <a href="https://github.com/2Groza/Undergraduate-Thesis/blob/master/Thesis%20Slide_Hao.pdf">Here</a> is my defense slide in English.
+                      <a href="https://github.com/2Groza/Undergraduate-Thesis/blob/master/Thesis%20Slide_Hao.pdf">Here</a> is my thesis defense slide in English.
                     </span>
                     <p class="item_desc"></p>
 
