--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
         </p>
         <li>Participated in the PROMISE-12 prostrate MRI segmentation challenge  <br>
         </li>
-        <li>Proposed autoencoder-pretrain and optical flow auxiliary method <br>
+        <li>Proposed autoencoder-pretrain and optical flow auxiliary methods to improve the performance of U-net, which is the state-of-the-art backbone of medical image segmentation tasks <br>
         </li>
-        <li> Got result competitive to state-of-the-art performance (dice coefficient 0.92)
+        <li> Got result competitive to state-of-the-art performance without further tricks (e.g. model ensemble, post processing etc.)
         </li>
         <p>
           
@@ -253,7 +253,7 @@
     </tr> 
     <tr>
       <td>
-        <li> 5-4 Scholarship (merit for the academic and extracurricular achievements)
+        <li> May 4th Scholarship (merit for the academic and extracurricular achievements)
         </li>
       </td>
       <td> 2017</td>
