--- a/index.html
+++ b/index.html
@@ -61,13 +61,16 @@
                  <div class="item_content">
                   <h3>Academic</h3>
                   <p class="item_info">
-                    <span style="font-weight: bold;">Sep.2013-Jul.2018 &nbsp; B.Sc &nbsp; School of Physics& Yuanpei College &nbsp; Peking University<br>
+                    <span style="font-weight: bold;">School of Physics & Yuanpei College, Peking University<br>
                     </span>
+                    <span style="font-style: italic;">Sep.2013-Jul.2018 &nbsp; 
+                    </span><a>B.Sc &nbsp;<br></a>
                     <span style="font-weight: bold;">Coursework:<br>
                     </span>
                     Overall Grade: 89/100, ranked 29/271 <br>
                     Major Grade: 91/100, ranked 2/48 <br>
-                    Core Courses: <br>
+                    <span style="font-weight: bold;">Core Courses:<br>
+                    </span> 
                     Linear Algebra (90), Advanced Mathematics (84), Introduction to Computation (92), Data Structure and Algorithm(87), Methods of Mathematical Physics(Complex Analysis & PDE) (91), Advanced topics in Quantum Mechanics (98), Probability and Statistics (95), Machine Learning (95), Artificial Neural Network (94), Statistical Learning (97.5), Introduction to Quantum Information Physics (99), Theory of Dynamic Optimization(90)<br>
                     <p>
 
