--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <tbody>
                   <tr>
                     <td width="323">
-                      <p align="center"><font face="Arial"><img border="0" src="images/hao1.jpg" width="150" height="200"></font></p>
+                      <p align="center"><font face="Arial"><img border="0" src="images/hao1.jpg" width="150" height="220"></font></p>
                     </td>
                     <td>
                       <font face="Arial" size="5"><b>&nbsp;Hao Sun <span lang="zh-cn">孙浩</span></b></font>
@@ -71,7 +71,7 @@
                     Major Grade: 91/100, ranked 2/48 <br>
                     <span style="font-weight: bold;">Core Courses:<br>
                     </span> 
-                    Linear Algebra (90), Advanced Mathematics (84), Introduction to Computation (92), Data Structure and Algorithm(87), Methods of Mathematical Physics(Complex Analysis & PDE) (91), Advanced topics in Quantum Mechanics (98), Probability and Statistics (95), Machine Learning (95), Artificial Neural Network (94), Statistical Learning (97.5), Introduction to Quantum Information Physics (99), Theory of Dynamic Optimization(90)<br>
+                    Linear Algebra (90), Advanced Mathematics (84), Introduction to Computation (92), Data Structure and Algorithm (87), Methods of Mathematical Physics (Complex Analysis & PDE) (91), Advanced topics in Quantum Mechanics (98), Probability and Statistics (95), Machine Learning (95), Artificial Neural Network (94), Statistical Learning (97.5), Introduction to Quantum Information Physics (99), Theory of Dynamic Optimization(90), Graduate Thesis (95)<br>
                     <p>
 
                     </p>
@@ -98,7 +98,7 @@
           <span style="font-style: italic;"> Aug.2018-Nov.2018 
           </span> &nbsp; <a href="http://www.ie.cuhk.edu.hk/main/index.shtml">Department of Information Engineering</a>, The Chinese University of Hong Kong, Hong Kong S.A.R.
         </p>
-        <li>Proposed a novel end-to-end unsupervised framework which leverages the inherent structures of videos to do video summarization, which yields superior performance compared to the state-of-the-art methods in both supervised and unsupervised video summary tasks<br>
+        <li>Proposed a novel end-to-end unsupervised framework leveraging the inherent video structures for video summarization with superior performance compared to the state-of-the-art methods<br>
         </li>
         <li>This work has been submitted to a conference. <br>
         </li>
@@ -205,7 +205,7 @@
         </li>
         <li>Introduced action pool method into reinforcement learning to tackle the exploration problem<br>
         </li>
-        <li>Used reinforcement learning to develop quantitative trading strategies in China A-share Market and brought about 8% annual return
+        <li>Developed quantitative trading strategies with policy gradient method in China A-share Market and brought about 8% annual return
         </li>
         <p>
           
@@ -227,12 +227,10 @@
           <span style="font-style: italic;"> Mar.2015-Feb.2017 
           </span> &nbsp; <a href="https://iqe.pku.edu.cn/english/home/index.htm"> Institute of Quantum Electronics</a>, Peking University, China  
         </p>
-        <li>Combined Hopfield Neural Network with statistical physics simulation (e.g. use neural network to understand the phase transition in a noval perspective) <br>
+        <li>Accelerated the Markov Chain Monte Carlo method in Ising Model simulation more than 260 times combining Metropolis algorithm with Hopfield Neural Network <br>
         </li>
         <li>
-          The state of art Markov Chain Monte Carlo method in Ising Model phase transition is accelerated more than 260 times <br>
-        </li>
-        <li>Applied autoencoders and variational autoencoders to Ising model and triangular XY-model spin configuration and showed that some laws of statistical physics can be discovered by generative models without human knowledge<br>
+          Demonstrated some laws of statistical physics can be re-discovered without human knowledge by applying auto-encoders and variational auto-encoders to Ising Model and Triangular XY-Model spin configurations<br>
         </li>
         <p>
           
@@ -263,7 +261,7 @@
     </tr> 
             <tr>
       <td>
-        <li> National Innovation Award (merit for outstanding undergraduate research program)
+        <li> National Innovation Fund for Undergraduate Research (merit for outstanding undergraduate research program)
         </li>
       </td>
       <td> 2015</td>
@@ -308,10 +306,16 @@
     Research Platforms and Libraries: PyTorch, TensorFlow, SciPy, Keras<br> 
     Operating Systems: Linux, Windows, macOS<br> 
     Language: Full proficiency English(TOEFL 106/120), Native Mandarin<br> 
-    Sports: Football, Skateboard, Roller-skating, Dance(Hip-Hop, Popping, Breaking)
   </p> 
 </div>
 
+ <div class="content">
+  <h3>Miscellaneous</h3>
+  <p> Football: Main striker of Yuanpei College football team, won the third place in Freshman Cup of Peking University<br> 
+  Roller-skating: Won the second place in speed skating competition and second place in fancy skating of Henan Province, 2010<br>
+  Dance (Hip-Hop, Popping, Breaking)  <a href="https://v.youku.com/v_show/id_XNTUwNjQ1MTUy.html?spm=a2h0k.11417342.soresults.dtitle"> [video 1] </a>  <a href="https://v.youku.com/v_show/id_XNTUwNTUwOTI4.html?spm=a2h0j.11185381.listitem_page1.5!2~A"> [video 2] </a> 
+   When I participated in the self-composing dance competition in my high school (The front one)</p><br>
+</div>
 
 
 
