--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
   <h3>Miscellaneous</h3>
   <p> Football: Main striker of Yuanpei College football team, won the third place in Freshman Cup of Peking University<br> 
   Roller-skating: Won the second place in speed skating competition and second place in fancy skating of Henan Province, 2010<br>
-  Dance (Hip-Hop, Popping, Breaking)  <a href="https://v.youku.com/v_show/id_XNTUwNjQ1MTUy.html?spm=a2h0k.11417342.soresults.dtitle"> [video 1] </a>  <a href="https://v.youku.com/v_show/id_XNTUwNTUwOTI4.html?spm=a2h0j.11185381.listitem_page1.5!2~A"> [video 2] </a> 
+  Dance (Hip-Hop, Popping, Breaking):  <a href="https://v.youku.com/v_show/id_XNTUwNjQ1MTUy.html?spm=a2h0k.11417342.soresults.dtitle"> [video 1] </a>  <a href="https://v.youku.com/v_show/id_XNTUwNTUwOTI4.html?spm=a2h0j.11185381.listitem_page1.5!2~A"> [video 2] </a> 
    When I participated in the self-composing dance competition in my high school (The front one)</p><br>
 </div>
 
