--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
                     </span>
                     <p class="item_desc"></p>
 
+                    <span style="font-weight: bold;">Research Proposal:<br>
+                      <a href="https://github.com/2Groza/Indoor-Navigation/blob/master/INDOOR_NAVIGATION__SURVEY_AND_APPROACHES.pdf">Research Proposal on the topic of Indoor Navigation</a> (an enriched version, last modified: Jan 5th)<br>
+                    </span>
+                    <p class="item_desc"></p>
+
+
+
                  </div>
               </div>
 <div class="content anchor" id="research"><h3>Research Experience</h3>
