--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     </span><a>B.Sc &nbsp;<br></a>
                     <span style="font-weight: bold;">Coursework:<br>
                     </span>
-                    Overall Grade: 89/100, ranked 29/271 <br>
-                    Major Grade: 91/100, ranked 2/48 <br>
+                    Overall Grade: 89/100 (3.75/4.00), ranked 29/271 <br>
+                    Major Grade: 91/100 (3.85/4.00), ranked 2/48 <br>
                     <span style="font-weight: bold;">Core Courses:<br>
                     </span> 
                     Linear Algebra (90), Advanced Mathematics (84), Introduction to Computation (92), Data Structure and Algorithm (87), Methods of Mathematical Physics (Complex Analysis & PDE) (91), Advanced topics in Quantum Mechanics (98), Probability and Statistics (95), Machine Learning (95), Artificial Neural Network (94), Statistical Learning (97.5), Introduction to Quantum Information Physics (99), Theory of Dynamic Optimization(90), Graduate Thesis (95)<br>
