--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
                     <p class="item_desc"></p>
 
                     <span style="font-weight: bold;">Research Proposal:<br>
-                      <a href="https://github.com/2Groza/Indoor-Navigation/blob/master/INDOOR_NAVIGATION__SURVEY_AND_APPROACHES.pdf">Research Proposal on the topic of Indoor Navigation</a> (an enriched version, last modified: Jan 5th)<br>
+                      <a href="https://github.com/2Groza/Indoor-Navigation/blob/master/INDOOR_NAVIGATION_SURVEY_AND_APPROACHES.pdf">Research Proposal on the topic of Indoor Navigation</a> (an enriched version, last modified: Jan 5th)<br>
                     </span>
                     <p class="item_desc"></p>
-
 
 
                  </div>
@@ -310,7 +309,7 @@
  <div class="content">
   <h3>Skills</h3>
   <p> Programming:Proficient in Python, Matlab, Mathematica, R &nbsp; <br> 
-    Research Platforms and Libraries: PyTorch, TensorFlow, SciPy, Keras<br> 
+    Research Platforms and Libraries: PyTorch, TensorFlow, Keras, SciPy, Scikit-learn<br> 
     Operating Systems: Linux, Windows, macOS<br> 
     Language: Full proficiency English(TOEFL 106/120), Native Mandarin<br> 
   </p> 
