--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     </span>
                     <p class="item_desc"></p>
 
-                    <span style="font-weight: bold;">Research Proposal:<br>
-                      <a href="https://github.com/2Groza/Indoor-Navigation/blob/master/INDOOR_NAVIGATION_SURVEY_AND_APPROACHES.pdf">Research Proposal on the topic of Indoor Navigation</a> (an enriched version, last modified: Jan 7th)<br>
+                    <span style="font-weight: bold;">A most recent research proposal:<br>
+                      <a href="https://github.com/2Groza/Indoor-Navigation/blob/master/INDOOR_NAVIGATION_SURVEY_AND_APPROACHES.pdf">Research Proposal on the topic of Indoor Navigation</a> (last modified: Jan 7th)<br>
                     </span>
                     <p class="item_desc"></p>
 
@@ -194,32 +194,7 @@
       </tr>
     </tbody> 
   </table> 
-<table bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white"> 
-    <tbody>
-      <tr valign="baseline">
-        <td width="90">
-          <p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a target="_blank"><img src="images/favicon.ico" width="50" border="0"></a></p>
-        </td>
-        <td valign="middle"><p style="margin-top:0; margin-right:0; margin-bottom:2mm;">
-          <span style="font-weight: bold;">Reinforcement Learning Research Intern
-          </span>
-          <br> 
-          <span style="font-style: italic;"> Feb.2017-Jun.2017 
-          </span> &nbsp; <a href="http://ai.chuangxin.com/?lang=en-Us"> Artificial Intelligence Institute, Sinovation Ventures Inc.</a>, China  
-        </p>
-        <li>Solved recursion problem (e.g. play the game of Tower of Hanoi) with reinforcement learning <br>
-        </li>
-        <li>Introduced action pool method into reinforcement learning to tackle the exploration problem<br>
-        </li>
-        <li>Developed quantitative trading strategies with policy gradient method in China A-share Market and brought about 8% annual return
-        </li>
-        <p>
-          
-        </p>
-        </td>
-      </tr>
-    </tbody> 
-  </table> 
+
 <table bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white"> 
     <tbody>
       <tr valign="baseline">
