--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </span>
                     <p class="item_desc"></p>
 
-                    <span style="font-weight: bold;">A most recent research proposal:<br>
+                    <span style="font-weight: bold;">A recent research proposal:<br>
                       <a href="https://github.com/2Groza/Indoor-Navigation/blob/master/INDOOR_NAVIGATION_SURVEY_AND_APPROACHES.pdf">Research Proposal on the topic of Indoor Navigation</a> (last modified: Jan 7th)<br>
                     </span>
                     <p class="item_desc"></p>
