--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                  <div class="item_content">
                     <h3>About Me</h3>
                      <p class="item_info">I received my Bachelor of Science degree from Yuanpei College, Peking University at 2018 and finished all compulsory courses in Physics and Data Science. I also got a double degree of Management from Guanghua School, Peking University. I was a research intern of AI Institute of Sinovation Ventures founded by Dr. Kaifu Lee, and a research assistant of LCDM group@UIUC. <br>
-                      My research interests inlcudes Machine Learning and Computer Vision, particularly in the field of unsupervised learning and reinforcement learning. I believe reinforcement learning provides a more natural approach to intelligence and unsupervised methods force us to learn about the intrinsic factors beyond mass data.
+                      My research interests include unsupervised learning and reinforcement learning. I believe reinforcement learning provides a more natural approach to intelligence and unsupervised methods force us to learn about the intrinsic laws beyond mass data.
                     <p class="item_desc"></p>
                  </div>
                  <div class="item_content">
