--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     </tr> 
      <tr>
       <td>
-        <li> <a href="http://pkunews.pku.edu.cn/xxfz/2014-08/29/content_284621.htm">First prize </a>in China Undergraduate Physics Tournament (CUPT2014)
+        <li> <a href="http://pkunews.pku.edu.cn/xxfz/2014-08/29/content_284621.htm">First prize </a>in China Undergraduate Physics Tournament (<a href="http://pt.nankai.edu.cn/cupt/list.htm">CUPT2014</a>)
       </td>
       <td> 2014</td>
     </tr> 
