--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
                  <div class="item_content">
                     <h3>About Me</h3>
-                     <p class="item_info">I am now a second year PhD student of MMLab@CUHK, supervised by Prof. Dahua Lin and Prof. Bolei Zhou. Previously I received my Bachelor of Science degree from Yuanpei Honor Program, Peking University and finished all compulsory courses in Physics and Data Science. I also got a double degree of Management from Guanghua School, Peking University. I was a research assistant of the LCDM group@UIUC. <br>
-                      I research passion lies in reinforcement learning. I believe reinforcement learning provides a natural approach to intelligence.
+                     <p class="item_info">I am now a second-year Ph.D. student of MMLab@CUHK, supervised by Prof. Dahua Lin and Prof. Bolei Zhou. Previously I received my Bachelor of Science degree from Yuanpei Honor Program, Peking University and finished all compulsory courses in Physics and Data Science. I also got a double degree in Management from Guanghua School, Peking University. I was a research assistant at the LCDM group@UIUC. <br>
+                      My research passion lies in reinforcement learning. I believe reinforcement learning provides a natural approach to intelligence.
                     <p class="item_desc"></p>
                  </div>
                  <div class="item_content">
