--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <span style="font-style: italic;"> Hao Sun, Jiadong Guo, Edward J. Kim, Robert J. Brunner
           </span> <!-- &nbsp; <a href="http://lcdm.illinois.edu/">Department of Astronomy</a>, The University of Illinois at Urbana-Champaign, United States -->
         </p>
-        <li>Developed a novel clustering approach of unsupervised star-galaxy classification by adding multi-peak Gaussian prior constraint into variational auto-encoder with a leading result of average AUC of 0.91 and accuracy over 0.89
+        <li>We developed a novel Cascade Variational Auto-Encoder based clustering approach of unsupervised star-galaxy classification and leveraged multi-peak Gaussian prior in the proposed method. Achieved a leading result of average AUC of 0.91 and accuracy over 0.89.
         </li>
         <p>
           
@@ -249,7 +249,7 @@
     </tr> 
     <tr>
       <td>
-        <li> The May 4th Scholarship (The highest merit for undergraduate students of Peking University for the academic and extracurricular achievements)
+        <li> The May-4th Scholarship (The highest merit for undergraduate students of Peking University for the academic and extracurricular achievements)
         </li>
       </td>
       <td> 2017</td>
@@ -305,19 +305,18 @@
  
  <div class="content">
   <h3>Skills</h3>
-  <p> Programming:Proficient in Python, Matlab, Mathematica, R &nbsp; <br> 
-    Research Platforms and Libraries: PyTorch, TensorFlow, Keras, SciPy, Scikit-learn<br> 
-    Operating Systems: Linux, Windows, macOS<br> 
+  <p> Programming: Python, C/C++, Matlab, Mathematica, R &nbsp; <br> 
+    Research Platforms and Libraries: PyTorch, Keras, TensorFlow, SciPy, Scikit-learn<br> 
     Language: Full proficiency English(TOEFL 106/120), Native Mandarin<br> 
   </p> 
 </div>
 
  <div class="content">
   <h3>Miscellaneous</h3>
-  <p> Football: Main striker of Yuanpei College football team, won the third place in Freshman Cup of Peking University<br> 
+  <p> Football: Main striker of Yuanpei College football team, won the third place in Freshman Cup of Peking University 2013<br> 
   Roller-skating: Won the second place in speed skating competition and second place in fancy skating of Henan Province, 2010<br>
   Dance:  <a href="https://v.youku.com/v_show/id_XNTUwNjQ1MTUy.html?spm=a2h0k.11417342.soresults.dtitle"> [video 1] </a>  <a href="https://v.youku.com/v_show/id_XNTUwNTUwOTI4.html?spm=a2h0j.11185381.listitem_page1.5!2~A"> [video 2] </a> 
-   When I participated in the self-composing dance competition in my high school (The front one)</p><br>
+   When I participated in the self-composing dance competition in my high school, 2012. (the front one)</p><br>
 </div>
 
 
