--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   </tr>
                 </tbody>
               </table>
-                    <p class="item_desc">
+                    <!-- <p class="item_desc">
                       <table border="1" cellpadding="0" width="1000">
                       <tr>
                         <td height="31" bgcolor="#FFFFFF"><p align="left"><span class="MsoNormal STYLE1">A vast world outside us, it leaves us human beings exist independently, it in front of us like a great and eternal mystery. However, at least in part is our observation and thinking. The world staring deep thought, like liberation just attract us, and I soon noticed, many of my respect and admiration for the people, in committed herself to the cause, find the heart of freedom and peace.</span> <span class="MsoNormal STYLE2"></Br><div align="right">
@@ -47,7 +47,7 @@
                       </tr>
                       </table>
                        </p>
-                 </div>
+                 </div> -->
                  
               </div>
               <div class="item">
