--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                  <div class="item_content">
                     <h3>About Me</h3>
-                     <p class="item_info">I am now a second-year M.Phil.-Ph.D. student of MMLab@CUHK, supervised by <a href="http://dahua.me/">Prof. Dahua Lin</a> and <a href="http://bzhou.ie.cuhk.edu.hk/">Prof. Bolei Zhou</a>. Previously I received my Bachelor of Science degree from Yuanpei Honor Program, Peking University and finished all compulsory courses in Physics and Data Science. I also got a double degree in Management from Guanghua School, Peking University. I was a research assistant at the LCDM group@UIUC advised <a href="https://ece.illinois.edu/directory/profile/bigdog">Prof. Robert J. Brunner</a>. <br>
+                     <p class="item_info">I am now a second-year postgraduate student of MMLab@CUHK, supervised by <a href="http://dahua.me/">Prof. Dahua Lin</a> and <a href="http://bzhou.ie.cuhk.edu.hk/">Prof. Bolei Zhou</a>. Previously I received my Bachelor of Science degree from Yuanpei Honor Program, Peking University and finished all compulsory courses in Physics and Data Science. I also got a double degree in Management from Guanghua School, Peking University. I was a research assistant at the LCDM group@UIUC advised <a href="https://ece.illinois.edu/directory/profile/bigdog">Prof. Robert J. Brunner</a>. <br>
                       My research passion lies in reinforcement learning. I believe reinforcement learning provides a natural approach to intelligence.
                     <p class="item_desc"></p>
                  </div>
