--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
                 <tbody>
                   <tr>
                     <td width="323">
-                      <p align="center"><font face="Arial"><img border="0" src="images/hao1.jpg" width="150" height="220"></font></p>
+                      <p align="center"><font face="Arial"><img border="0" src="images/haosun.jpeg" width="220" height="220"></font></p>
                     </td>
                     <td>
                       <font face="Arial" size="5"><b>&nbsp;Hao Sun <span lang="zh-cn">孙浩</span></b></font>
-                      <p><font face="Arial"><font face="Arial" style="font-size: 11pt;">&nbsp;</font>Email: sunhopht@gmail.com</font></p><p><font face="Arial"><font face="Arial" style="font-size: 11pt;">&nbsp;</font>Tel: (+86) 156-5070-7770</font></p>
-                    </font></p><p><font face="Arial"><font face="Arial" style="font-size: 11pt;">&nbsp;</font>Skype: live:sunhopht_1</font></p>
-                      
+                      <p><font face="Arial"><font face="Arial" style="font-size: 11pt;">&nbsp;</font><a href="sunhopht@gmail.com">Email</a></font></p><p><font face="Arial"><font face="Arial" style="font-size: 11pt;">&nbsp;</font><a href="https://scholar.google.com/citations?user=7ZNoHJkAAAAJ&hl=en">Google Scholar</a></font></p>
+                    <!-- </font></p><p><font face="Arial"><font face="Arial" style="font-size: 11pt;">&nbsp;</font>Skype: live:sunhopht_1</font></p> -->
                     </td>
                   </tr>
                 </tbody>
@@ -54,8 +53,8 @@
 
                  <div class="item_content">
                     <h3>About Me</h3>
-                     <p class="item_info">I am now a second-year postgraduate student of MMLab@CUHK, supervised by <a href="http://dahua.me/">Prof. Dahua Lin</a> and <a href="http://bzhou.ie.cuhk.edu.hk/">Prof. Bolei Zhou</a>. Previously I received my Bachelor of Science degree from Yuanpei Honor Program, Peking University and finished all compulsory courses in Physics and Data Science. I also got a double degree in Management from Guanghua School, Peking University. I was a research assistant at the LCDM group@UIUC advised <a href="https://ece.illinois.edu/directory/profile/bigdog">Prof. Robert J. Brunner</a>. <br>
-                      My research passion lies in reinforcement learning. I believe reinforcement learning provides a natural approach to intelligence.
+                     <p class="item_info">I am now a first-year PhD student of the University of Cambridge, supervised by <a href="https://www.vanderschaar-lab.com/prof-mihaela-van-der-schaar/">Prof. Mihaela van der Schaar</a>. Previously I received my M.Phil. degree from MMLab@CUHK, advised by <a href="http://dahua.me/">Prof. Dahua Lin</a> and <a href="http://bzhou.ie.cuhk.edu.hk/">Prof. Bolei Zhou</a>; and received my Bachelor of Science degree from Yuanpei Honor Program, Peking University. I finished all compulsory courses in Physics and Data Science. I also got a double degree in Management from Guanghua School, Peking University. I was a research assistant at the LCDM group@UIUC advised <a href="https://ece.illinois.edu/directory/profile/bigdog">Prof. Robert J. Brunner</a>. <br>
+                      My research passion lies in reinforcement learning. I believe reinforcement learning provides a natural approach to intelligence. I've researched on sample-efficient model-free DRL, goal-conditioned RL, safe-RL, offline-RL, robotics control, uncertainty quantification, and quantitative trading (A/H/Crypto).
                     <p class="item_desc"></p>
                  </div>
                  <div class="item_content">
