--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </td>
                     <td>
                       <font face="Arial" size="5"><b>&nbsp;Hao Sun <span lang="zh-cn">孙浩</span></b></font>
-                      <p><font face="Arial"><font face="Arial" style="font-size: 11pt;">&nbsp;</font><a href="sunhopht@gmail.com">Email</a></font></p><p><font face="Arial"><font face="Arial" style="font-size: 11pt;">&nbsp;</font><a href="https://scholar.google.com/citations?user=7ZNoHJkAAAAJ&hl=en">Google Scholar</a></font></p>
+                      <p><font face="Arial"><font face="Arial" style="font-size: 11pt;">&nbsp;</font><a href="sunhopht@gmail.com"> sunhopht@gmail.com </a></font></p><p><font face="Arial"><font face="Arial" style="font-size: 11pt;">&nbsp;</font><a href="https://scholar.google.com/citations?user=7ZNoHJkAAAAJ&hl=en">Google Scholar</a></font></p>
                     <!-- </font></p><p><font face="Arial"><font face="Arial" style="font-size: 11pt;">&nbsp;</font>Skype: live:sunhopht_1</font></p> -->
                     </td>
                   </tr>
